--- a/plugins/software/app/views/patch_updates/_patch_summary.html.erb
+++ b/plugins/software/app/views/patch_updates/_patch_summary.html.erb
@@ -122,7 +122,7 @@
     <% end %>
     <% if update == false %>
       <div class="statusbar_row">
-       <b> <%= _("Your system is up to date.") %> <!-- RORSCAN_ITL --></b>
+        <%= _("Your system is up to date.") %> <!-- RORSCAN_ITL -->
       </div>
     <% end %>
 
