--- a/webclient/app/sass/style.sass
+++ b/webclient/app/sass/style.sass
@@ -59,7 +59,8 @@ body
   background-color: !c_background
   /* BG Grey: #fcfcfc is taken see example above
   color: !c_text
-  font-family: Trebuchet MS, Helvetica, sans-serif
+  /* font-family: Trebuchet MS, Helvetica, sans-serif
+  font-family: Helvetica, Tahoma, Trebuchet MS, Arial, Verdana, sans-serif
   width: 100%
   height: 100%
   margin: 0
@@ -613,23 +614,7 @@ tr
 .progress_bar_progress
   background: #7AD3FF
 
-/* Password strength indicator
 
-#password-strength
-  /*     uncomment this if you want
-  /*   a border around passwd strength bar
-  /* border: 1px solid #aaa;
-  font-size: 0.8em
-  height: 5ex
-  padding: 0.3em
-  /*width: 40em
-  width: 30em
-  position: relative
-  left: 15em
-  top: 1ex
-
-.password-strength-bar
-  height: 3px
 
 /* List accordion styles
 
