--- a/webclient/public/stylesheets/webyast-controlpanel.css
+++ b/webclient/public/stylesheets/webyast-controlpanel.css
@@ -43,21 +43,22 @@
   -moz-border-radius:10px;
   /*ROUND*/
   -moz-border-radius:100%;
+
   -webkit-border-radius:112px;
 
   background: -moz-radial-gradient(center 45deg, circle closest-side, #eee 0%, #474747 100%) transparent;
-  background-image: -webkit-radial-gradient(circle, grey, black);
+  background-image: -webkit-radial-gradient(circle, #eee, #000000);
 
 }
 
 #status-eye.eye_healthy {
   background: -moz-radial-gradient(center 45deg, circle closest-side, #68b400 0%, #474747 100%) transparent;
-  background-image: -webkit-radial-gradient(circle, green, black);
+  background-image: -webkit-radial-gradient(circle, #68b400, #000000);
 }
 
 #status-eye.eye_warning {
   background: -moz-radial-gradient(center 45deg, circle closest-side, red 0%, #474747 99%);
-  background-image: -webkit-radial-gradient(circle, red, black);
+  background-image: -webkit-radial-gradient(circle, red, #000000);
 }
 
 div.statusbar_header {
@@ -131,9 +132,9 @@ div.statusbar_row label { margin-left: 5px; vertical-align: middle; }
 .status_ok, .status_warning {
   margin-right:5px;
   display:inline-block;
-  border:2px solid #fff;
-  width:20px;
-  height:20px;
+
+  width:22px;
+  height:22px;
   padding:0px;
   text-align:center;
   vertical-align:middle;
@@ -151,13 +152,13 @@ div.statusbar_row label { margin-left: 5px; vertical-align: middle; }
 .status_warning {
   background: -moz-linear-gradient(center bottom , #b43434, #ea5656) repeat scroll 0 0 transparent;
   background: -moz-radial-gradient(center center 45deg, circle closest-side, #ea5656 0%, #7b3232 100%) repeat scroll 0 0 transparent;
-  background-image: -webkit-radial-gradient(circle, red, black);
+  background-image: -webkit-radial-gradient(circle, #ea5656, #7b3232);
 }
 
 .status_ok {
   background: -moz-linear-gradient(center bottom , #25712e, #59c766) repeat scroll 0 0 transparent;
   background: -moz-radial-gradient(center center 45deg, circle closest-side, #59c766 0%, #25712e 100%) repeat scroll 0 0 transparent;
-  background-image: -webkit-radial-gradient(circle, green, black);
+  background-image: -webkit-radial-gradient(circle, #59c766, #25712e);
 }
 
 #favorites { border-color: #eee; }
