--- a/webclient/public/stylesheets/webyast-firewall.css
+++ b/webclient/public/stylesheets/webyast-firewall.css
@@ -30,7 +30,7 @@
   cursor: pointer;
   text-shadow: 0px 1px 0px #fff;
   min-width:80px;
-  font-family: Arial;
+/*  font-family: Arial; */
 
   -moz-box-shadow: 0px 0px 1px #666;
   -webkit-box-shadow: 0px 0px 1px #666;
