--- a/webclient/public/stylesheets/webyast-modal-dialog.css
+++ b/webclient/public/stylesheets/webyast-modal-dialog.css
@@ -1,24 +1,24 @@
 /*#--
  *# Webyast Webservice framework
  *#
- *# Copyright (C) 2009, 2010 Novell, Inc. 
+ *# Copyright (C) 2009, 2010 Novell, Inc.
  *#   This library is free software; you can redistribute it and/or modify
  *# it only under the terms of version 2.1 of the GNU Lesser General Public
- *# License as published by the Free Software Foundation. 
+ *# License as published by the Free Software Foundation.
  *#
  *#   This library is distributed in the hope that it will be useful, but WITHOUT
  *# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
- *# FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more 
+ *# FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more
  *# details.
  *#
  *#   You should have received a copy of the GNU Lesser General Public
- *# License along with this library; if not, write to the Free Software 
+ *# License along with this library; if not, write to the Free Software
  *# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
  *#++ */
 
 #modalWindow {
   font-family: Helvetica,Arial,sans-serif;
-  position:absolute; 
+  position:absolute;
   z-index:1001;
   border: 2px solid #666;
   background-color:#fff;
@@ -30,27 +30,27 @@
   display:block;
 }
 
-#modalWindowShade { 
+#modalWindowShade {
 /*   background: url("../images/stripes-bg.png") repeat scroll 0 0 transparent; */
-  background-color: #eee; 
-  position:absolute; 
+  background-color: #eee;
+  position:absolute;
   width: 100%;
-  height:100%; 
-  
+  height:100%;
+
   opacity:0.5;
   -moz-opacity:0.5;
   display:block;
    top:0; left:0;
   -moz-box-shadow: inset 0px 0px 300px #222;
-  z-index:1000; 
+  z-index:1000;
 }
 
-#modalWindowClose { 
-  position: absolute; 
-  width:22px; 
-  height:22px; 
-  top:-12px; 
-  right:-22px; 
+#modalWindowClose {
+  position: absolute;
+  width:22px;
+  height:22px;
+  top:-12px;
+  right:-22px;
 }
 
 /* Popup */
@@ -63,12 +63,12 @@ div.mpopup, div.mdialog {
   padding:0;
   margin:0;
 }
-div.mpopup img { 
-  height:48px; 
-  width:48px; 
-  margin-right:10px; 
-  vertical-align:middle; 
-  display:inline-block; 
+div.mpopup img {
+/*  height:48px;
+  width:48px; */
+  margin-right:10px;
+  vertical-align:middle;
+  display:inline-block;
 }
 
 /* Dialog */
@@ -87,9 +87,4 @@ b.minfo { color:#999; /*text-decoration: blink;*/ }
 b.mwait { text-decoration: blink; }
 
 /* div.mform { padding:10px; color:grey; } */
-
-
-
-
-
 
