--- a/webclient/public/stylesheets/webyast-online-help.css
+++ b/webclient/public/stylesheets/webyast-online-help.css
@@ -1,40 +1,40 @@
 /*#--
  *# Webyast Webservice framework
  *#
- *# Copyright (C) 2009, 2010 Novell, Inc. 
+ *# Copyright (C) 2009, 2010 Novell, Inc.
  *#   This library is free software; you can redistribute it and/or modify
  *# it only under the terms of version 2.1 of the GNU Lesser General Public
- *# License as published by the Free Software Foundation. 
+ *# License as published by the Free Software Foundation.
  *#
  *#   This library is distributed in the hope that it will be useful, but WITHOUT
  *# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
- *# FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more 
+ *# FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more
  *# details.
  *#
  *#   You should have received a copy of the GNU Lesser General Public
- *# License along with this library; if not, write to the Free Software 
+ *# License along with this library; if not, write to the Free Software
  *# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
  *#++ */
 
 #questionMark {
-  float:right; 
-  font-size:20px; 
-  padding:1px; 
-  color:#fff; 
-  background-color:#666; 
-  font-family:'Arial'; 
-  font-weight:bold; 
-  vertical-align:middle; 
-  display:inline-block; 
-  height:22px; 
-  width:22px; 
-  text-align:center; 
-  -webkit-border-radius:100%; 
-  -moz-border-radius:100%; 
+  float:right;
+  font-size:20px;
+  padding:1px;
+  color:#fff;
+  background-color:#666;
+  font-family:'Arial';
+  font-weight:bold;
+  vertical-align:middle;
+  display:inline-block;
+  height:22px;
+  width:22px;
+  text-align:center;
+  -webkit-border-radius:100%;
+  -moz-border-radius:100%;
 
   float:right;
   margin:15px 0px 0px 0px;
-    
+
   background: -moz-linear-gradient(center top , #aaa 10%, #888 30%, #777 51%, #666 100%) repeat scroll 0 0 transparent;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0.10, #aaa), color-stop(0.30, #888), color-stop(0.51, #777), color-stop(1.00, #666));
   text-shadow: 0 -1px 0 #222;
@@ -61,37 +61,39 @@
   font-weight:normal;
   line-height:14px;
   text-align:left;
-  font-family:'Arial'; 
+  font-family:'Arial';
 
   position:absolute;
   display:block;
   z-index:1000;
-  
-  -moz-box-shadow: 0 0 10px #bbb;
-  -webkit-box-shadow: 0 0 10px #bbb;
-  box-shadow: 0 0 10px #bbb;
+
+  -moz-box-shadow: 0 0 10px #474747;
+  -webkit-box-shadow: 0 0 10px #474747;
+   box-shadow: 0 0 10px #474747;
 
   -moz-border-radius:4px;
-  -webkit-border-radius:4px; 
+  -webkit-border-radius:4px;
 
-  background: -moz-linear-gradient(90deg, #fff, #f5f5f5) repeat scroll 0 0 transparent;
-  background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#f5f5f5));
-  border: 1px solid #ddd;
+  background: -moz-linear-gradient(90deg, #fff, #f2f2f2) repeat scroll 0 0 transparent;
+  background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#f2f2f2));
+  border: 2px solid #666;
 }
 
 #onlineHelpLoading {
   font-size:18px;
   line-height:18px;
   text-align:center;
-  font-family:'Arial'; 
+  font-family:'Arial';
+  background: -moz-linear-gradient(90deg, #fff, #f2f2f2) repeat scroll 0 0 transparent;
+  background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#f2f2f2));
   padding: 15px;
   margin:10px;
-  background-color:#f2f2f2;
-  border:1px solid #eee;
+  background-color:#fff;
+  border:0px solid #eee;
   display:block;
 }
 
-#onlineHelpLoading span { text-decoration: blink; color:#666; vertical-align:middle; text-align:center; }
+#onlineHelpLoading span { text-decoration: blink; color:#474747; font-weight:bold; font-size:20px; vertical-align:middle; text-align:center; }
 #onlineHelpSpinner { height:32px; width:32px; vertical-align:middle; margin-right:5px; }
 #onlineHelpContent div.sect1 { margin: 5px; padding: 20px; }
 #onlineHelpContent h2.title { font-size:16px; line-height:16px; }
@@ -120,7 +122,8 @@
   margin: 1em 0;
   width: 95%;
   -moz-border-radius:4px;
-  -webkit-border-radius:4px; 
+  -webkit-border-radius:4px;
   padding:2px 5px;
   line-height:12px;
 }
+
