--- a/plugins/software/app/views/patch_updates/index.html.erb
+++ b/plugins/software/app/views/patch_updates/index.html.erb
@@ -1,20 +1,20 @@
 <!--
 # Copyright (c) 2009-2010 Novell, Inc.
-# 
+#
 # All Rights Reserved.
-# 
+#
 # This program is free software; you can redistribute it and/or modify it
 # under the terms of version 2 of the GNU General Public License
 # as published by the Free Software Foundation.
-# 
+#
 # This program is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 # GNU General Public License for more details.
-# 
+#
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, contact Novell, Inc.
-# 
+#
 # To contact Novell about this file by physical or electronic mail,
 # you may find current contact information at www.novell.com
 -->
@@ -34,15 +34,15 @@
     //block whole form onsubmit
     var message = "<%= _("Please wait") -%>";
     $("#update_submit_button").click(function() {
-      disableFormOnSubmit(message);      
+      disableFormOnSubmit(message);
     });
 
-    
+
   });
   function disableForm(){
     $(document).ready(function() {
       var message = <%= jss _("Please wait") -%>;
-      disableFormOnSubmit(message);    
+      disableFormOnSubmit(message);
     });
   }
 
@@ -63,8 +63,13 @@
   <div class='plugin-content'>
     <% if @patch_updates.empty? %>
     <h3 class="module_header"><%=_("Your system is up to date.") unless @error%></h3> <!-- RORSCAN_ITL -->
+
     <div class="nav-buttons">
-      <%= form_back_button %>
+      <% unless Basesystem.new.load_from_session(session).completed? %>
+        <%= form_send_buttons :label => _("Update"), :id=>"update_submit_button", :action => 'install' %>
+      <% else %>
+        <%= form_back_button %>
+      <% end %>
     </div>
     <% else %>
       <% @hash = Hash.new(0)
@@ -88,26 +93,26 @@
       </div>
 
       <div id="updates_panel">
-	  <button type="submit" id="comment" class="left active" value="all" 
+	  <button type="submit" id="comment" class="left active" value="all"
 	     onclick ="<%= remote_function(:update => :patchesd, :url => { :action => :load_filtered }, :with => "'value=' + value",
 	     :loading =>visual_effect(:appear, 'parent', :duration =>1), :complete => visual_effect(:fade, 'parent', :duration => 1)) %>">
 	     <img src='/icons/yast-online_update.png'/><%=_("All updates") %>&nbsp;<span>(<%=counter%>)</span>
 	  </button>
-	  <button type="submit" class="middle" value="security" 
-	      onclick ="<%= remote_function(:update => :patchesd, :url => { :action => :load_filtered }, :with => "'value=' + value", 
+	  <button type="submit" class="middle" value="security"
+	      onclick ="<%= remote_function(:update => :patchesd, :url => { :action => :load_filtered }, :with => "'value=' + value",
 	      :loading =>visual_effect(:appear, 'parent', :duration =>1), :complete => visual_effect(:fade, 'parent', :duration => 1)) %>">
 	      <img src='/icons/kupdateapplet_red.png'/><%=_("Security") %>&nbsp;<span>(<%=@hash["security"]%>)</span></button>
-	  <button type="submit" class="middle" value="important" 
+	  <button type="submit" class="middle" value="important"
 	      onclick ="<%= remote_function(:update => :patchesd, :url => { :action => :load_filtered }, :with => "'value=' + value",
 	      :loading =>visual_effect(:appear, 'parent', :duration =>1), :complete => visual_effect(:fade, 'parent', :duration => 1)) %>">
 	    <img src='/icons/kupdateapplet_yellow.png'/><%=_("Important") %>&nbsp;<span>(<%=@hash["important"]%>)</span>
-	  </button>	  
-	  <button type="submit" class="middle" value="green" 
+	  </button>
+	  <button type="submit" class="middle" value="green"
 	      onclick ="<%= remote_function(:update => :patchesd, :url => { :action => :load_filtered }, :with => "'value=' + value",
 	      :loading =>visual_effect(:appear, 'parent', :duration =>1), :complete => visual_effect(:fade, 'parent', :duration => 1)) %>">
 	      <img src='/icons/kupdateapplet_green.png'/><%=_("Recommended") %>&nbsp;<span>(<%=@hash["green"]%>)</span>
 	  </button>
-	  <button type="submit" class="right" value="optional" 
+	  <button type="submit" class="right" value="optional"
 	    onclick ="<%= remote_function(:update => :patchesd, :url => { :action => :load_filtered }, :with => "'value=' + value",
 	    :loading =>visual_effect(:appear, 'parent', :duration =>1), :complete => visual_effect(:fade, 'parent', :duration => 1)) %>">
 	    <img src='/icons/kupdateapplet_optional.png'/><%=_("Optional") %>&nbsp;<span>(<%=@hash["optional"] + @hash["low"] %>)</span>
@@ -119,15 +124,14 @@
 
     <% form_for :patch_updates, :url => { :action => "install" }, :html => {:id => "patches-form"} do |form| %>
       <fieldset>
-	<div id="patchesd"><%= render :partial => "patches"%></div>
+      	<div id="patchesd"><%= render :partial => "patches"%></div>
       </fieldset>
       <div class="buttons" style="padding:10px; vertical-align:middle; ">
-	<%= form_send_buttons :label => _("Update"), :id=>"update_submit_button", :action => 'install' %>
-	<br style="clear:both" />
+      	<%= form_send_buttons :label => _("Update"), :id=>"update_submit_button", :action => 'install' %>
+      	<br style="clear:both" />
       </div>
-    <% end %> 
+    <% end %>
   <% end %>
 </div>
 <% end %>
-
 
