--- a/webclient/public/stylesheets/new_inputs.css
+++ b/webclient/public/stylesheets/new_inputs.css
@@ -109,26 +109,9 @@ input[type="text"].without_border_right {
 /*  SOFTWARE REPOSITORIES */
 #repository_name, #repository_url { width:70%; }
 
-#mailForm input[type="text"], #group_cn { width:300px; }
-#mail_test_mail_address, #mail_submit  { float: left; vertical-align:middle; }
-#mail_test_mail_address {width:225px!important;}
-#group_members_string { width:166px; }
-
-#mail_test_mail_address {
-  border-radius:3px 0px 0px 3px;
-  -moz-border-radius: 3px 0px 0px 3px;
-  -webkit-border-radius:3px 0px 0px 3px;
-}
-
-#mail_submit {
-   border-left-width: 0px;
-   border-radius:0px 3px 3px 0px;
-  -moz-border-radius:0px 3px 3px 0px;
-  -webkit-border-radius:0px 3px 3px 0px;
-}
-
-
+#group_cn { width:300px; }
 #group_members_string, #manage_members { float:left; font-size:12px; }
+#group_members_string { width:166px; }
 #manage_members { margin-left:5px;}
 
 /* TIME */
