--- a/webclient/public/stylesheets/webyast-forms.css
+++ b/webclient/public/stylesheets/webyast-forms.css
@@ -25,6 +25,8 @@
 .fieldset_body div.row label { vertical-align: middle; width:200px; display:inline-block; float:none;}
 .fieldset_body div.row label.error {  vertical-align: middle; color: #d70000; display:inline; float:none; width:auto; margin-left:20px; font-size:11px;}
 
+.fieldset_body div.lastrow { padding-bottom:4px; }
+
 
 .fieldset_body input[type="text"].error, .fieldset_body input[type="password"].error { float:none; vertical-align:middle; }
 .fieldset_body input[type="text"].error, .fieldset_body input[type="password"].valid { float:none; vertical-align:middle; }
@@ -46,6 +48,20 @@
 	font-weight:normal;
 }
 
+.fieldset_body select {
+	background-color: #FEFEFE;
+	border-color: #C4C4C4 #E9E9E9 #E9E9E9 #C4C4C4;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 0px;
+  box-shadow: 0 0 0 #EEEEEE inset;
+  color: #555555;
+  font-weight: normal;
+  vertical-align: middle;
+  font-family: Trebuchet MS,Helvetica,Arial,Verdana,sans-serif;
+  font-size: 13px;
+  padding:2px 0px;
+}
 
 
 .fieldset_body input[type="text"]:focus, .fieldset_body input[type="password"]:focus { border-color: #aaaaaa #bbbbbb #bbbbbb #aaaaaa; }
