--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -224,7 +224,7 @@
 
     <div class="button_container">
  	    <div class="hr">&nbsp;</div>
-	    <div class="nav-buttons" style="margin:0px 0px; padding:10px 0;">
+	    <div class="nav-buttons">
 	      <%= form_send_buttons :disabled => write_disabled %>
 	    </div>
     </div>
