--- a/webclient/public/stylesheets/webyast-forms.css
+++ b/webclient/public/stylesheets/webyast-forms.css
@@ -35,9 +35,9 @@
 
 .fieldset_body input[type="text"], .fieldset_body input[type="password"] {
 	width:200px;
-	height:18px;
+	height:16px;
 	-moz-box-shadow:inset 0px 0px 0px #eee;
-	border-color: #C4C4C4 #E9E9E9 #E9E9E9 #C4C4C4;
+	border-color: #C4C4C4 #E0E0E0 #E0E0E0 #C4C4C4;
 	border-style: solid;
 	border-width: 1px;
 	vertical-align:middle;
@@ -61,6 +61,7 @@
   font-family: Trebuchet MS,Helvetica,Arial,Verdana,sans-serif;
   font-size: 13px;
   padding:2px 0px;
+  width:208px;
 }
 
 
@@ -115,4 +116,6 @@
 
 .webyast_form .button_container { margin:5px auto; position:relative; float:none; width:96%; }
 .webyast_form .hr { height:1px; border-bottom:0px dotted #ddd; margin:5px 0px;  background: -moz-linear-gradient(left, #d0d0d0 0%, #fafafa 100%);  padding:0px; }
+
+div.button_container div.nav-buttons { margin:0px 0px; padding:10px 0; }
 
