--- a/webclient/public/stylesheets/webyast-administrator.css
+++ b/webclient/public/stylesheets/webyast-administrator.css
@@ -1,3 +1,21 @@
+/*#--
+ *# Webyast Webservice framework
+ *#
+ *# Copyright (C) 2009, 2010 Novell, Inc.
+ *#   This library is free software; you can redistribute it and/or modify
+ *# it only under the terms of version 2.1 of the GNU Lesser General Public
+ *# License as published by the Free Software Foundation.
+ *#
+ *#   This library is distributed in the hope that it will be useful, but WITHOUT
+ *# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+ *# FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more
+ *# details.
+ *#
+ *#   You should have received a copy of the GNU Lesser General Public
+ *# License along with this library; if not, write to the Free Software
+ *# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
+ *#++ */
+
 #administrator_password { position:inherit; }
 #administrator_aliases, #administrator_submit { float: left; vertical-align:middle; }
 #administrator_aliases { padding: 2px 3px 3px 3px; }
@@ -5,40 +23,10 @@
 
 
 div.password_container { position:relative; margin-bottom:6px; }
-/*div.password_container label { float:left; clear:both; }*/
 
 .graybar { width:208px; background:#dddddd; height:4px; display:inline-block;  position:absolute; top:30px; left:204px; }
 .colorbar { width:0px; background-image:url(../images/passwordstrength2.jpg); height:4px; display:inline-block; position:absolute; top:30px; left:204px; }
 .percent { font-weight:bold; font-size:11px; color:#888; position:absolute; top:23px; left:434px; right:0px; }
 
 #validation_result { margin-left: 15px; color:#D70000; font-size:11px; color:green; font-family: Tahoma,Trebuchet MS,Helvetica,sans-serif; }
-
-
-/* Password strength indicator*/
-
-/* #password-strength {
-	font-size:10px;
-  height: 10px;
-  line-height:10px;
-  padding:3px 0px 4px 0px;
-
-}
-
-span.password-min-char {
-	float:left;
-	color:#888;line-height:12px;
-	font-size:10px;
-	display:block!important;
-	width:204px;
-}
-
-span.password-strength-bar {
-	float:left;
-  height: 3px;
-	text-align:center;
-	max-width:207px;
-	display:block!important;
-	clear:right;
-	overflow:visible;
-} */
 
